--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,3 @@
-Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
-
-@slevchyk
-slevchyk
-/
-worker_srv
-1
-00
- Code Issues 0 Pull requests 0 Actions Projects 0 Wiki Security Insights Settings
-worker_srv/.gitignore
-@slevchyk slevchyk init commit
-71fc801 4 days ago
-72 lines (60 sloc)  714 Bytes
-
-
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
@@ -72,6 +51,8 @@ builds/**/images/*
 *.png
 *.jpeg
 *.jpg
+*.bin
+*.exe
 
 # security / ssl
 *.json
@@ -79,27 +60,3 @@ builds/**/images/*
 *.xxjson
 *.crt
 *.key
-© 2020 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-© 2020 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
